Updated edit users page to include last name. Fixed spacing issues on add accountability buddy button. Updated contact page info.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -245,6 +245,14 @@ input {
   margin-left: 0;
 }
 
+#modal_section {
+  margin-top: 10px;
+}
+
+#new_micropost_section {
+  margin-top: -5px;
+}
+
 /* Users index */
 .users {
   list-style: none;
